--- a/src/Cpnucleo.Infra.CrossCutting.IoC/Cpnucleo.Infra.CrossCutting.IoC.csproj
+++ b/src/Cpnucleo.Infra.CrossCutting.IoC/Cpnucleo.Infra.CrossCutting.IoC.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Cpnucleo.Application\Cpnucleo.Application.csproj" />
     <ProjectReference Include="..\Cpnucleo.Domain\Cpnucleo.Domain.csproj" />
+    <ProjectReference Include="..\Cpnucleo.Infra.CrossCutting.Communication.GRPC\Cpnucleo.Infra.CrossCutting.Communication.GRPC.csproj" />
     <ProjectReference Include="..\Cpnucleo.Infra.CrossCutting.Communication\Cpnucleo.Infra.CrossCutting.Communication.csproj" />
     <ProjectReference Include="..\Cpnucleo.Infra.CrossCutting.Identity\Cpnucleo.Infra.CrossCutting.Identity.csproj" />
     <ProjectReference Include="..\Cpnucleo.Infra.Security\Cpnucleo.Infra.Security.csproj" />
