--- a/src/Cpnucleo.Infra.CrossCutting.IoC/Cpnucleo.Infra.CrossCutting.IoC.csproj
+++ b/src/Cpnucleo.Infra.CrossCutting.IoC/Cpnucleo.Infra.CrossCutting.IoC.csproj
@@ -5,8 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0" />
   </ItemGroup>
 
   <ItemGroup>
